[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AutoCython-jianjun"
version = "2.0.0"
authors = [{name = "jianjun", email = "910667956@qq.com"}]
description = "自动Cython，使用Cython批量编译.py文件为.pyd文件！"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["cython", "compile", "pyd", "pyc", "python", "autopyd"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "setuptools",
    "cython",
    "rich",
]

[project.urls]
homepage = "https://github.com/EVA-JianJun/AutoCython"
repository = "https://github.com/EVA-JianJun/AutoCython"
documentation = "https://github.com/EVA-JianJun/AutoCython#readme"

[project.scripts]
AutoCython = "AutoCython:main"
